--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -41,9 +41,9 @@ import { Icon } from "astro-icon/components";
 				</div>
 				-->
 				<div title={siteConfig.title}>
-					<svg class="inline-block size-8 fill-current text-accent-base dark:text-accent-two drop-shadow-[0px_2.5px_2.5px_rgba(0,0,0,0.35)]">
+					<!-- <svg class="inline-block size-8 fill-current text-accent-base dark:text-accent-two drop-shadow-[0px_2.5px_2.5px_rgba(0,0,0,0.35)]">
 						<use href="/brand.svg#citrus"></use>
-					</svg>
+					</svg> -->
 				</div>
 				
 				<strong class="'max-[320px]:hidden' bg-clip-text text-transparent bg-gradient-to-r from-accent-one to-accent-two hidden xs:block z-10 mb-0.5 ms-2 text-2xl group-hover:text-accent-one">
@@ -94,13 +94,6 @@ import { Icon } from "astro-icon/components";
 					))
 				}
 				
-				<a
-					class="flex h-8 items-center rounded-lg bg-accent-base/5 px-4 text-accent-base underline-offset-2 hover:bg-accent-base/10"
-					data-astro-prefetch
-					href="/posts/citrus-docs/intro/"
-				>
-					Docs
-				</a>
 				
 				<!-- Dropdown menu button for large screens. Needs improvement. -->
 				<!--
@@ -229,13 +222,13 @@ import { Icon } from "astro-icon/components";
 					</a>
 				))
 			}
-			<a
+			<!-- <a
 				class="flex h-8 items-center rounded-lg bg-accent-base/5 px-4 text-accent-base underline-offset-2 hover:bg-accent-base/10"
 				data-astro-prefetch
 				href="/series/citrus-docs"
 			>
 				Docs
-			</a>
+			</a> -->
 		</nav>
 	</div>
 </div>
