--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,10 +32,10 @@ const latestNotes = allNotes.sort(collectionDateSort).slice(0, MAX_NOTES);
 	<section class="max-w-xl mx-auto relative flex items-center justify-center h-screen -mt-24">
 		<div class="w-full text-center">
 			<span class="title text-3xl bg-gradient-to-r from-accent-two/85 via-accent-one/85 to-accent-two/85 dark:from-accent-two dark:via-accent-one dark:to-accent-two bg-clip-text text-transparent">
-				Introducing Astro Citrus!
+				Welcome to my Travel Blog
 			</span>
 			<p class="mt-4 mb-4 text-lg font-medium">
-				Hi, I’m an Astro theme for building websites or blogs. To customize, add posts, or make it yours, click the GitHub icon below to visit my repo.
+				Ciao, sono Samuele e su questo sito pubblicherò tutti i miei viaggi e consigli utili per viaggiare.
 			</p>
 			<div class="flex justify-center mb-4">
 				<SocialList />
@@ -43,15 +43,11 @@ const latestNotes = allNotes.sort(collectionDateSort).slice(0, MAX_NOTES);
 			<div class="flex justify-center space-x-4 mt-4">
 				<a href="/posts/" class="relative flex items-center justify-center h-8 px-4 rounded-lg shadow-lg hover:brightness-110 transition-all bg-gradient-to-r from-accent-one to-accent-two">
 					<span class="text-bgColor font-semibold">
-						Read Blog
+						Leggi il Blog
 					</span>
 				</a>
 
-				<a href="/notes/wake-up/" class="relative flex items-center justify-center h-8 px-4 rounded-lg shadow-lg bg-special-lighter hover:brightness-110 hover:bg-special-lightest">
-					<span class="bg-clip-text text-transparent font-semibold bg-gradient-to-r from-accent-one to-accent-two">
-						Wake up
-					</span>
-				</a>
+			
 			</div>
 		</div>
 	</section>
@@ -73,7 +69,7 @@ const latestNotes = allNotes.sort(collectionDateSort).slice(0, MAX_NOTES);
 	</section>
 
 	<!-- Notes Section -->
-	{
+	<!-- {
 		latestNotes.length > 0 && (
 			<section class="mt-12">
 				<h2 class="title mb-6 text-accent-two">
@@ -90,7 +86,7 @@ const latestNotes = allNotes.sort(collectionDateSort).slice(0, MAX_NOTES);
 				</div>
 			</section>
 		)
-	}
+	} -->
 
 	<!-- Debug -->
 	<!--
