--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -22,6 +22,7 @@ const {
 >
 	<head>
 		<BaseHead articleDate={articleDate} description={description} ogImage={ogImage} title={title} />
+<script defer src="https://cloud.umami.is/script.js" data-website-id="9378f377-f541-44f7-960c-0c4f5c2164a0"></script>
 	</head>
 	<body class="min-w-4xl relative m-auto min-h-screen w-full max-w-6xl grow bg-bgColor">
 		<ThemeProvider />
